fixed overflow for job postings

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -571,6 +571,9 @@ input {
     margin-bottom: -20px;
     min-height: 30px;
   }
+  .container{
+    overflow: auto;
+  }
 
 }
 //----------------------------------
